[package]
name = "rusnmp"
version = "0.1.0"
authors = ["Eric Chen <610521240@gms.ndhu.edu.tw>"]
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rusnmp"
repository = "https://github.com/dalof41014/rusnmp"
description = "A lightweight, async SNMP v1/v2c/v3 client library for Rust with minimal dependencies."
keywords = ["snmp", "network-monitoring", "async", "udp", "datacenter"]
categories = ["network-programming", "hardware-support"]

[dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "rt-multi-thread"] }
thiserror = "1"
log = "0.4"
rand = "0.8"
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["alloc"], optional = true }
cfb-mode = { version = "0.8", optional = true }
des = { version = "0.8", optional = true }
block-padding = { version = "0.3", optional = true }

[features]
default = ["v3"]
v3 = ["hmac", "sha1", "sha2", "md-5", "aes", "cbc", "cfb-mode", "des", "block-padding"]

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
